Initial styling of SoldOutItemList. Add fonts. Seperate between components and containers.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>eve-trading</title>
+    <link rel="stylesheet" type="text/css" href="/src/fonts/fonts.css" />
   </head>
   <body>
     <div id="app"></div>
